[tool.poetry]
name = "pymtom"
version = "0.3.1"
description = ""
authors = ["Mirek Zvolský <zvolsky@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
zeep = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
